- Fixes character image on tablet + phone fitting nicely. - Moves Pet Inventory over (or fail)
git-svn-id: https://subversion.assembla.com/svn/mapler-me@348 7cbc8f23-9b70-4854-b091-be65f742de0c

--- a/trunk/website/inc/css/style.player.css
+++ b/trunk/website/inc/css/style.player.css
@@ -6,7 +6,7 @@
 	box-shadow: 0 1px 2px rgba(0,0,0,0.15);
 	border: 1px solid #ddd;
 	margin-bottom: 20px;
-	width: 90%;
+	width: 96%;
 }
 
 .name {
